<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000">

    <TextView
        android:id="@+id/lblTotalIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_income"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/lblTotalExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_expense"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/lblBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />
</LinearLayout>
